--- a/xviewer/xviewer/xviewer.ui
+++ b/xviewer/xviewer/xviewer.ui
@@ -18,7 +18,25 @@
     <normaloff>:/XViewer/img/xv.ico</normaloff>:/XViewer/img/xv.ico</iconset>
   </property>
   <property name="styleSheet">
-   <string notr="true">/* 顶部样式 */
+   <string notr="true">/* 按钮样式 */
+QPushButton:hover
+
+ { 
+background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 rgba(0, 102, 184, 255), stop:0.495 rgba(39, 39, 39, 255), stop:0.505 rgba(39,39, 39, 255), stop:1 rgba(0, 102, 184, 255));
+border: none;
+border-radius:5px;
+color: rgb(255, 255, 255);
+font: 75 12pt &quot;黑体&quot;;
+ }
+QPushButton:!hover
+ { 
+	background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 rgba(0, 50, 150, 255), stop:0.495 rgba(0, 102, 184, 255), stop:0.505 rgba(0, 102, 184, 255), stop:1 rgba(0, 50, 150, 255));
+ border: none;
+border-radius:5px;
+color: rgb(255, 255, 255);
+font: 75 12pt &quot;黑体&quot;;
+ }
+/* 顶部样式 */
 #head
 {
 background-color:#3c3c3c;
@@ -90,8 +108,8 @@ background-color:#1e1e1e;
      <rect>
       <x>690</x>
       <y>10</y>
-      <width>101</width>
-      <height>31</height>
+      <width>91</width>
+      <height>41</height>
      </rect>
     </property>
     <widget class="QPushButton" name="min">
@@ -169,17 +187,17 @@ background-color:#1e1e1e;
     <rect>
      <x>0</x>
      <y>50</y>
-     <width>801</width>
-     <height>541</height>
+     <width>701</width>
+     <height>371</height>
     </rect>
    </property>
    <widget class="QWidget" name="left" native="true">
     <property name="geometry">
      <rect>
-      <x>9</x>
-      <y>19</y>
+      <x>10</x>
+      <y>10</y>
       <width>200</width>
-      <height>591</height>
+      <height>600</height>
      </rect>
     </property>
     <property name="maximumSize">
@@ -188,14 +206,78 @@ background-color:#1e1e1e;
       <height>16777215</height>
      </size>
     </property>
+    <widget class="QListWidget" name="cam_list">
+     <property name="geometry">
+      <rect>
+       <x>0</x>
+       <y>39</y>
+       <width>201</width>
+       <height>961</height>
+      </rect>
+     </property>
+     <property name="iconSize">
+      <size>
+       <width>30</width>
+       <height>30</height>
+      </size>
+     </property>
+     <item>
+      <property name="text">
+       <string>camear_test</string>
+      </property>
+      <property name="icon">
+       <iconset resource="xviewer.qrc">
+        <normaloff>:/XViewer/img/cam.png</normaloff>:/XViewer/img/cam.png</iconset>
+      </property>
+     </item>
+    </widget>
+    <widget class="QPushButton" name="add_cam">
+     <property name="geometry">
+      <rect>
+       <x>5</x>
+       <y>5</y>
+       <width>51</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>新增</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="set_cam">
+     <property name="geometry">
+      <rect>
+       <x>70</x>
+       <y>5</y>
+       <width>51</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>修改</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="del_cam">
+     <property name="geometry">
+      <rect>
+       <x>140</x>
+       <y>5</y>
+       <width>51</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>删除</string>
+     </property>
+    </widget>
    </widget>
    <widget class="QWidget" name="cams" native="true">
     <property name="geometry">
      <rect>
-      <x>189</x>
-      <y>19</y>
-      <width>571</width>
-      <height>501</height>
+      <x>220</x>
+      <y>10</y>
+      <width>501</width>
+      <height>351</height>
      </rect>
     </property>
    </widget>
@@ -270,9 +352,60 @@ background-color:#1e1e1e;
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>add_cam</sender>
+   <signal>clicked()</signal>
+   <receiver>XViewerClass</receiver>
+   <slot>AddCam()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>45</x>
+     <y>77</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>-180</x>
+     <y>-189</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>set_cam</sender>
+   <signal>clicked()</signal>
+   <receiver>XViewerClass</receiver>
+   <slot>SetCam()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>110</x>
+     <y>87</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>7</x>
+     <y>-336</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>del_cam</sender>
+   <signal>clicked()</signal>
+   <receiver>XViewerClass</receiver>
+   <slot>DelCam()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>179</x>
+     <y>74</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>203</x>
+     <y>-272</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
  <slots>
   <slot>MaxWindow()</slot>
   <slot>NormalWindow()</slot>
+  <slot>AddCam()</slot>
+  <slot>SetCam()</slot>
+  <slot>DelCam()</slot>
  </slots>
 </ui>
