--- a/xviewer/xviewer/xviewer.ui
+++ b/xviewer/xviewer/xviewer.ui
@@ -215,6 +215,9 @@ background-color:#1e1e1e;
        <height>961</height>
       </rect>
      </property>
+     <property name="dragEnabled">
+      <bool>true</bool>
+     </property>
      <property name="iconSize">
       <size>
        <width>30</width>
