--- a/xviewer/xviewer/xviewer.ui
+++ b/xviewer/xviewer/xviewer.ui
@@ -73,6 +73,11 @@ background-color:#252525;
 #cams
 {
 background-color:#1e1e1e;
+}
+#status
+{
+color: rgb(255, 255, 255);
+	font: 75 10pt &quot;Adobe Devanagari&quot;;
 }</string>
   </property>
   <widget class="QWidget" name="head" native="true">
@@ -180,6 +185,19 @@ background-color:#1e1e1e;
     <zorder>close</zorder>
     <zorder>normal</zorder>
     <zorder>max</zorder>
+   </widget>
+   <widget class="QLabel" name="status">
+    <property name="geometry">
+     <rect>
+      <x>240</x>
+      <y>15</y>
+      <width>191</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>监控中....</string>
+    </property>
    </widget>
   </widget>
   <widget class="QWidget" name="body" native="true">
